# RottenScript

./: Cargo.toml  LICENSE  Makefile  README.md  ebnf.ebnf
.github/workflows/: rust.yml
docs/EBNF/: draft_2021-01-01.ebnf  draft_2021-01-02.ebnf  draft_2021-01-03.ebnf  draft_2021-01-11.ebnf  draft_2021-02-13.ebnf  draft_2021-02-16.ebnf  draft_2021-02-18.ebnf  draft_2021-03-07.ebnf
rotted-script-core/: Cargo.toml
rotted-script-core/src/: semantic_analyzer.rs
rotted-script-core/src/lexer/: token.rs
rotted-script-core/src/parser/: parse_error.rs
rotted-script-rs/: Cargo.toml
rotted-script-rs/src/: main.rs
rotted-script-wasm/: Cargo.toml
rotted-script-wasm/node-project/: package-lock.json  package.json
rotted-script-wasm/node-project/sample/: sample1.rots
rotted-script-wasm/node-project/src/: index.js
rotted-script-wasm/src/: lib.rs
rotten-script-core/src/: builder.rs  parser.rs
rotten-script-core/src/lexer/: reserved_word.rs
rotten-script-core/src/parser/: ast.rs  ast_type.rs  non_terminal.rs  token_stack.rs
rotten-script-rs/: Cargo.toml
rotten-script-rs/src/: main.rs
rotten-script-wasm/node-project/src/: index.js
src/: Cargo.toml  Makefile
src/rotten-script-core/: Cargo.toml
src/rotten-script-core/src/: builder.rs  lexer.rs  lib.rs  parser.rs  semantic_analyzer.rs
src/rotten-script-rs/: Cargo.toml
src/rotten-script-rs/src/: main.rs
src/rotten-script-wasm/: Cargo.toml
src/rotten-script-wasm/node-project/: .gitignore  package-lock.json  package.json  tsconfig.json
src/rotten-script-wasm/src/: lib.rs
(+25 files in other folders)
