[package]
name = "rotted-script"
version = "0.1.0"
authors = ["Yukio Tanaka"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[workspace]
members = [
    "rotted-script-core",
    "rotted-script-rs",
    "rotted-script-wasm"
]
